--- a/src/main/resources/view/dashbord_form.fxml
+++ b/src/main/resources/view/dashbord_form.fxml
@@ -3,109 +3,145 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="787.0" prefWidth="1550.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.DashBordController">
+<AnchorPane minHeight="797.0" minWidth="1550.0" prefHeight="797.0" prefWidth="1550.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.DashBordController">
    <children>
-      <ImageView fitHeight="787.0" fitWidth="1550.0" layoutX="6.0" nodeOrientation="INHERIT" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="803.0" fitWidth="1550.0" layoutX="6.0" nodeOrientation="INHERIT" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="20.0" layoutY="693.0" prefHeight="70.0" prefWidth="775.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-         <children>
-            <JFXButton fx:id="employee" layoutX="14.0" layoutY="8.0" onAction="#btnEmployeeOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/Emp-removebg-preview.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="student" layoutX="464.0" layoutY="8.0" onAction="#btnStudentOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: white;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/Student.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="subject" layoutX="1208.0" layoutY="8.0" onAction="#btnSubjectOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/subject-removebg-preview.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="income" layoutX="701.0" layoutY="8.0" onAction="#btnIncomeOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/exam-removebg-preview.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="room" layoutX="958.0" layoutY="8.0" onAction="#btnRoomOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/Room-removebg-preview.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="home" layoutX="724.0" layoutY="8.0" onAction="#btnHomeOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/home-removebg-preview.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-            <JFXButton fx:id="teacher" layoutX="222.0" layoutY="8.0" onAction="#btnTeacherOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="8.0">
-               <graphic>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../assests/tutorIcon1.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-         </children></AnchorPane>
-      <AnchorPane fx:id="root" layoutX="20.0" layoutY="101.0" prefHeight="586.0" prefWidth="1510.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
-         <children>
-            <AnchorPane fx:id="rootNode" layoutX="217.0" layoutY="9.0" prefHeight="506.0" prefWidth="1278.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="9.0" />
-         </children></AnchorPane>
-      <Label layoutX="106.0" layoutY="37.0" prefHeight="36.0" prefWidth="604.0" style="-fx-font: white;" text="Collage Of Fast Track Learning Hostaling School">
+      <AnchorPane fx:id="root" layoutX="212.0" layoutY="105.0" prefHeight="687.0" prefWidth="1012.0" style="-fx-background-color: black;" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="212.0" AnchorPane.rightAnchor="326.0" AnchorPane.topAnchor="101.0" />
+      <Label layoutX="212.0" layoutY="28.0" prefHeight="59.0" prefWidth="1080.0" style="-fx-font: white;" text="COLLAGE OF FAST TRACK LEARNING HOSTALING SCHOOL">
          <font>
-            <Font name="System Bold" size="25.0" />
+            <Font size="39.0" />
          </font>
       </Label>
-      <ImageView fitHeight="73.0" fitWidth="70.0" layoutX="27.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="20.0">
+      <ImageView fitHeight="86.0" fitWidth="105.0" layoutX="67.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="14.0">
          <image>
-            <Image url="@../assests/CFTLLogo.png" />
+            <Image url="@../assests/CFTLLogo-removebg-preview.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="account" layoutX="1006.0" layoutY="18.0" onAction="#btnAccountOnAction" prefHeight="55.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" text=" " AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-         <graphic>
-            <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+      <AnchorPane layoutX="14.0" layoutY="105.0" prefHeight="683.0" prefWidth="192.0" style="-fx-background-color: #ffffff; -fx-background-color: #9bc39b;" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="105.0">
+         <children>
+            <JFXButton fx:id="teacher" layoutX="1.0" layoutY="384.0" onAction="#btnTeacherOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text="Exam" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <JFXButton fx:id="home" layoutY="179.0" minHeight="30.0" minWidth="55.0" onAction="#btnHomeOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text=" Home" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="2.0">
+               <image>
+                  <Image url="@../assests/home-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="student" layoutY="219.0" maxHeight="50.0" minHeight="35.0" minWidth="35.0" onAction="#btnStudentOnAction" prefHeight="35.0" prefWidth="192.0" style="-fx-background-color: white;" text="Student" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="2.0">
+               <image>
+                  <Image url="@../assests/Student.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="employee" layoutX="1.0" layoutY="259.0" minHeight="35.0" onAction="#btnEmployeeOnAction" prefHeight="35.0" prefWidth="192.0" style="-fx-background-color: #ffffff;" text=" Staff" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="262.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="2.0">
+               <image>
+                  <Image url="@../assests/Emp-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="room" layoutX="1.0" layoutY="301.0" onAction="#btnRoomOnAction" prefHeight="35.0" prefWidth="190.0" style="-fx-background-color: #ffffff;" text=" Room" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="-6.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="-6.0">
+               <image>
+                  <Image url="@../assests/Room-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="subject" layoutY="342.0" minHeight="35.0" onAction="#btnSubjectOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text="Subject" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="-1.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="-1.0">
+               <image>
+                  <Image url="@../assests/subject-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="income" layoutX="1.0" layoutY="425.0" onAction="#btnIncomeOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text="Income" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="3.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assests/exam-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="4.0" layoutY="428.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assests/exam-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="account" onAction="#btnAccountOnAction" prefHeight="174.0" prefWidth="192.0" text=" " AnchorPane.topAnchor="0.0">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+            </JFXButton>
+            <ImageView fitHeight="134.0" fitWidth="105.0" layoutX="43.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assests/username.png" />
                </image>
             </ImageView>
-         </graphic>
-         <cursor>
-            <Cursor fx:constant="DEFAULT" />
-         </cursor>
-      </JFXButton>
+            <Label fx:id="lblUseraName" layoutX="54.0" layoutY="127.0" />
+            <JFXButton layoutX="6.0" layoutY="594.0" prefHeight="31.0" prefWidth="146.0" style="-fx-background-color: white;" text="Log Out" AnchorPane.leftAnchor="0.0" />
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="595.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assests/logoutIcon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <Label layoutX="1427.0" layoutY="14.0" text="08 : 27">
+         <font>
+            <Font size="37.0" />
+         </font>
+      </Label>
+      <Label layoutX="1322.0" layoutY="58.0" text="23 December 2003">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <AnchorPane layoutX="1327.0" layoutY="100.0" prefHeight="686.0" prefWidth="311.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="101.0">
+         <children>
+            <AnchorPane layoutX="5.0" layoutY="627.0" prefHeight="59.0" prefWidth="281.0" style="-fx-background-color: green;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+               <children>
+                  <Text layoutX="49.0" layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email : cftl@gmail.com">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="66.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel : 0766433312">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <TableView layoutX="5.0" layoutY="54.0" prefHeight="200.0" prefWidth="273.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+              <columns>
+                <TableColumn prefWidth="98.0" text="Section" />
+                <TableColumn prefWidth="116.0" text="Subject" />
+                  <TableColumn prefWidth="86.0" text="Teacher" />
+              </columns>
+            </TableView>
+            <Text layoutX="60.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Today Class Sheduel">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Text>
+            <TableView layoutX="5.0" layoutY="306.0" prefHeight="286.0" prefWidth="301.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="Time" />
+                <TableColumn prefWidth="225.0" text="Work" />
+              </columns>
+            </TableView>
+            <Text layoutX="82.0" layoutY="298.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Day Time Table">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
