--- a/src/main/resources/view/employeepage_form.fxml
+++ b/src/main/resources/view/employeepage_form.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="586.0" prefWidth="1510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.EmployeePageController">
+<AnchorPane fx:id="root" minWidth="1012.0" prefHeight="687.0" prefWidth="1012.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.EmployeePageController">
    <children>
-      <ImageView fitHeight="586.0" fitWidth="1510.0" layoutX="11.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" layoutX="11.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
@@ -15,8 +15,8 @@
       <JFXButton fx:id="ViewEmployee" layoutY="146.0" onAction="#btnViewEmployeeOnAction" prefHeight="50.0" prefWidth="162.0" style="-fx-background-color: #000000;" text="View Employees" AnchorPane.bottomAnchor="390.0" AnchorPane.leftAnchor="10.0" />
       <JFXButton fx:id="JobType" layoutY="222.0" onAction="#btnJobTypeOnAction" prefHeight="50.0" prefWidth="162.0" style="-fx-background-color: #000000;" text="Job Type" AnchorPane.bottomAnchor="314.0" AnchorPane.leftAnchor="10.0" />
       <JFXButton fx:id="ManageEmployee" layoutY="70.0" onAction="#btnManageEmployeeOnAction" prefHeight="50.0" prefWidth="162.0" style="-fx-background-color: #000000;" text="Manage Employee" AnchorPane.bottomAnchor="466.0" AnchorPane.leftAnchor="10.0" />
-      <AnchorPane fx:id="rootNode" layoutX="222.0" layoutY="70.0" prefHeight="506.0" prefWidth="1278.0" style="-fx-background-color: gray;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="222.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="70.0" />
-      <ImageView fitHeight="279.0" fitWidth="218.0" layoutY="305.0" pickOnBounds="true" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1291.0" AnchorPane.topAnchor="305.0">
+      <AnchorPane fx:id="rootNode" layoutX="356.0" layoutY="29.0" prefHeight="607.0" prefWidth="644.0" style="-fx-background-color: gray;" />
+      <ImageView fitHeight="279.0" fitWidth="218.0" layoutY="373.0" pickOnBounds="true" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="794.0" AnchorPane.topAnchor="373.0">
          <image>
             <Image url="@../assests/DeleteEmp.jpg" />
          </image>
