--- a/src/main/resources/view/dashbord_form.fxml
+++ b/src/main/resources/view/dashbord_form.fxml
@@ -29,9 +29,9 @@
             <Image url="@../assests/CFTLLogo-removebg-preview.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="14.0" layoutY="105.0" prefHeight="683.0" prefWidth="192.0" style="-fx-background-color: #ffffff; -fx-background-color: #9bc39b;" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="105.0">
+      <AnchorPane layoutX="14.0" layoutY="105.0" prefHeight="683.0" prefWidth="192.0" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="105.0">
          <children>
-            <JFXButton fx:id="teacher" layoutX="1.0" layoutY="384.0" onAction="#btnTeacherOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text="Exam" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <JFXButton fx:id="exam" layoutX="1.0" layoutY="384.0" onAction="#btnExamOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text="Exam" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <JFXButton fx:id="home" layoutY="179.0" minHeight="30.0" minWidth="55.0" onAction="#btnHomeOnAction" prefHeight="35.0" prefWidth="191.0" style="-fx-background-color: #ffffff;" text=" Home" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="2.0">
                <image>
@@ -44,7 +44,7 @@
                   <Image url="@../assests/Student.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="employee" layoutX="1.0" layoutY="259.0" minHeight="35.0" onAction="#btnEmployeeOnAction" prefHeight="35.0" prefWidth="192.0" style="-fx-background-color: #ffffff;" text=" Staff" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <JFXButton fx:id="staff" layoutX="1.0" layoutY="259.0" minHeight="35.0" onAction="#btnStaffOnAction" prefHeight="35.0" prefWidth="192.0" style="-fx-background-color: #ffffff;" text=" Staff" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
             <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="262.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="2.0">
                <image>
                   <Image url="@../assests/Emp-removebg-preview.png" />
@@ -73,7 +73,7 @@
                   <Image url="@../assests/exam-removebg-preview.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="account" onAction="#btnAccountOnAction" prefHeight="174.0" prefWidth="192.0" text=" " AnchorPane.topAnchor="0.0">
+            <JFXButton fx:id="account" layoutY="-5.0" onAction="#btnAccountOnAction" prefHeight="179.0" prefWidth="192.0" text=" " AnchorPane.topAnchor="-5.0">
                <cursor>
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
@@ -84,7 +84,7 @@
                </image>
             </ImageView>
             <Label fx:id="lblUseraName" layoutX="54.0" layoutY="127.0" />
-            <JFXButton layoutX="6.0" layoutY="594.0" prefHeight="31.0" prefWidth="146.0" style="-fx-background-color: white;" text="Log Out" AnchorPane.leftAnchor="0.0" />
+            <JFXButton layoutX="6.0" layoutY="594.0" onAction="#btnLogOutOnAction" prefHeight="31.0" prefWidth="146.0" style="-fx-background-color: white;" text="Log Out" AnchorPane.leftAnchor="0.0" />
             <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="2.0" layoutY="595.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assests/logoutIcon.png" />
