--- a/src/main/resources/view/income_form.fxml
+++ b/src/main/resources/view/income_form.fxml
@@ -13,75 +13,70 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="root" minHeight="586.0" minWidth="1506.0" prefHeight="586.0" prefWidth="1506.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.IncomeController">
+<AnchorPane fx:id="root" minHeight="477.0" minWidth="980.0" prefHeight="687.0" prefWidth="1012.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.IncomeController">
    <children>
-      <ImageView fitHeight="586.0" fitWidth="1510.0" layoutX="162.0" layoutY="-7.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" layoutX="7.0" layoutY="3.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="388.0" fitWidth="591.0" layoutX="364.0" layoutY="182.0" pickOnBounds="true">
-         <image>
-            <Image url="@../assests/Income-removebg-preview.png" />
-         </image>
-      </ImageView>
       <JFXComboBox fx:id="cmbMonth" layoutX="299.0" layoutY="85.0" onAction="#cmbMonthOnAction" prefHeight="31.0" prefWidth="184.0" promptText="month" AnchorPane.topAnchor="85.0" />
-      <Label layoutX="14.0" layoutY="30.0" prefHeight="51.0" prefWidth="342.0" text="Income &amp; Expenditure" AnchorPane.bottomAnchor="515.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="1148.0" AnchorPane.topAnchor="20.0">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
       <JFXTextField fx:id="txtYear" layoutX="282.0" layoutY="85.0" promptText="Enter Year" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="85.0" />
       <Text layoutX="282.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Year :" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="68.0" />
       <Text layoutX="299.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Month :" AnchorPane.topAnchor="68.0" />
-      <AnchorPane layoutX="20.0" layoutY="169.0" prefHeight="155.0" prefWidth="712.0" AnchorPane.rightAnchor="774.0" AnchorPane.topAnchor="169.0">
+      <AnchorPane layoutX="151.0" layoutY="145.0" prefHeight="180.0" prefWidth="636.0" AnchorPane.rightAnchor="193.0" AnchorPane.topAnchor="145.0">
          <children>
-            <DatePicker fx:id="dateDate" layoutX="91.0" layoutY="14.0" prefHeight="31.0" prefWidth="184.0" />
-            <Text layoutX="22.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date :" AnchorPane.leftAnchor="22.0" />
-            <Text layoutX="357.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :" AnchorPane.leftAnchor="357.0" />
-            <JFXTextField fx:id="txtDesc" layoutX="455.0" layoutY="14.0" promptText="Enter Description" />
-            <Text layoutX="356.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amont :" AnchorPane.leftAnchor="22.0" />
-            <JFXTextField fx:id="txtAmount" layoutX="88.0" layoutY="97.0" prefHeight="31.0" prefWidth="191.0" promptText="Enter amont" />
-            <JFXButton fx:id="btnExpenditure" layoutX="575.0" layoutY="98.0" onAction="#btnExpenditureOnAction" style="-fx-background-color: green;" text="Expenditure" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="98.0" />
-            <JFXButton fx:id="btnIncome" layoutX="481.0" layoutY="98.0" onAction="#btnIncomeOnAction" style="-fx-background-color: green;" text="Income" AnchorPane.topAnchor="98.0" />
+            <DatePicker fx:id="dateDate" layoutX="92.0" layoutY="40.0" prefHeight="31.0" prefWidth="184.0" />
+            <Text layoutX="29.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date :" AnchorPane.leftAnchor="29.0" />
+            <Text layoutX="357.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :" AnchorPane.leftAnchor="357.0" />
+            <JFXTextField fx:id="txtDesc" layoutX="455.0" layoutY="40.0" promptText="Enter Description" />
+            <Text layoutX="22.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amont :" AnchorPane.leftAnchor="22.0" />
+            <JFXTextField fx:id="txtAmount" layoutX="88.0" layoutY="102.0" prefHeight="31.0" prefWidth="191.0" promptText="Enter amont" />
+            <JFXButton fx:id="btnExpenditure" layoutX="490.0" layoutY="105.0" onAction="#btnExpenditureOnAction" style="-fx-background-color: green;" text="Expenditure" AnchorPane.rightAnchor="47.0" AnchorPane.topAnchor="105.0" />
+            <JFXButton fx:id="btnIncome" layoutX="398.0" layoutY="105.0" onAction="#btnIncomeOnAction" style="-fx-background-color: green;" text="Income" AnchorPane.topAnchor="105.0" />
          </children>
       </AnchorPane>
-      <Text layoutX="991.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Income Total :" AnchorPane.leftAnchor="991.0" AnchorPane.topAnchor="243.0" />
-      <Text layoutX="991.0" layoutY="486.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenditure Total :" AnchorPane.leftAnchor="991.0" AnchorPane.topAnchor="470.0" />
-      <Label fx:id="lblIncomeTotal" layoutX="139.0" layoutY="490.0" AnchorPane.leftAnchor="1110.0" AnchorPane.topAnchor="243.0" />
-      <Label fx:id="lblExpenditureTotal" layoutX="904.0" layoutY="494.0" AnchorPane.leftAnchor="1130.0" AnchorPane.topAnchor="470.0" />
-      <AnchorPane layoutX="989.0" layoutY="521.0" prefHeight="51.0" prefWidth="247.0">
+      <Text layoutX="30.0" layoutY="612.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Income Total :" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="596.0" />
+      <Text layoutX="593.0" layoutY="612.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenditure Total :" AnchorPane.leftAnchor="593.0" AnchorPane.topAnchor="596.0" />
+      <AnchorPane layoutX="391.0" layoutY="634.0" prefHeight="30.0" prefWidth="247.0">
          <children>
-            <Text layoutX="3.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Final Income :" AnchorPane.bottomAnchor="20.0" />
-            <Label fx:id="lblFinalIncome" layoutX="106.0" layoutY="26.0" />
+            <Text layoutY="20.7646484375" strokeType="OUTSIDE" strokeWidth="0.0" text="Final Income :" AnchorPane.bottomAnchor="4.2353515625" />
+            <Label fx:id="lblFinalIncome" layoutX="106.0" layoutY="5.0" prefHeight="21.0" prefWidth="130.0" />
          </children>
       </AnchorPane>
-      <Label layoutX="1198.0" layoutY="38.0" text="Income ">
+      <Label layoutX="189.0" layoutY="329.0" text="Income ">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnSaveIn" layoutX="1373.0" layoutY="235.0" onAction="#btnSaveInOnAction" style="-fx-background-color: green;" text="Save Income" />
-      <JFXButton fx:id="btnnSaveEx" layoutX="1343.0" layoutY="465.0" onAction="#btnSaveExOnAction" style="-fx-background-color: green;" text="Save Expenditure" />
-      <TableView fx:id="tblExpenditure" layoutX="990.0" layoutY="293.0" prefHeight="168.0" prefWidth="488.0" AnchorPane.leftAnchor="990.0" AnchorPane.topAnchor="293.0">
+      <JFXButton fx:id="btnSaveIn" layoutX="314.0" layoutY="592.0" onAction="#btnSaveInOnAction" style="-fx-background-color: green;" text="Save Income" />
+      <JFXButton fx:id="btnnSaveEx" layoutX="847.0" layoutY="591.0" onAction="#btnSaveExOnAction" style="-fx-background-color: green;" text="Save Expenditure" />
+      <TableView fx:id="tblExpenditure" layoutX="593.0" layoutY="367.0" prefHeight="219.0" prefWidth="388.0" AnchorPane.leftAnchor="593.0" AnchorPane.topAnchor="367.0">
          <columns>
-            <TableColumn fx:id="colExDate" prefWidth="125.0" text="Date" />
-            <TableColumn fx:id="colExDesc" prefWidth="206.0" text="Description" />
-            <TableColumn fx:id="colExAmount" prefWidth="156.0" text="Amont" />
+            <TableColumn fx:id="colExDate" prefWidth="78.0" text="Date" />
+            <TableColumn fx:id="colExDesc" prefWidth="184.0" text="Description" />
+            <TableColumn fx:id="colExAmount" prefWidth="125.0" text="Amont" />
          </columns>
       </TableView>
-      <TableView fx:id="tblIncome" layoutX="990.0" layoutY="64.0" prefHeight="168.0" prefWidth="488.0" AnchorPane.leftAnchor="990.0" AnchorPane.topAnchor="64.0">
+      <TableView fx:id="tblIncome" layoutX="31.0" layoutY="367.0" prefHeight="219.0" prefWidth="388.0" AnchorPane.leftAnchor="31.0" AnchorPane.topAnchor="367.0">
         <columns>
-          <TableColumn fx:id="colInDate" prefWidth="125.0" text="Date" />
-          <TableColumn fx:id="colInDesc" prefWidth="206.0" text="Description" />
-            <TableColumn fx:id="colInAmount" prefWidth="156.0" text="Amont" />
+          <TableColumn fx:id="colInDate" prefWidth="78.0" text="Date" />
+          <TableColumn fx:id="colInDesc" prefWidth="184.0" text="Description" />
+            <TableColumn fx:id="colInAmount" prefWidth="125.0" text="Amont" />
         </columns>
       </TableView>
-      <Label layoutX="1195.0" layoutY="264.0" text="Expenditure">
+      <Label layoutX="735.0" layoutY="329.0" text="Expenditure">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <JFXButton layoutX="30.0" layoutY="531.0" onAction="#btnSalaryOnAction" prefHeight="30.0" prefWidth="130.0" style="-fx-background-color: green;" text="Pay Salary" />
+      <JFXButton layoutX="815.0" layoutY="74.0" onAction="#btnSalaryOnAction" prefHeight="30.0" prefWidth="130.0" style="-fx-background-color: green;" text="Pay Salary" />
+      <Label fx:id="lblIncomeTotal" layoutX="136.0" layoutY="595.0" />
+      <Label fx:id="lblExpenditureTotal" layoutX="724.0" layoutY="595.0" />
+      <Text layoutX="39.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Income &amp; Expenditure" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
