--- a/src/main/resources/view/manageroom_form.fxml
+++ b/src/main/resources/view/manageroom_form.fxml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="506.0" prefWidth="1278.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.RoomManageController">
+<AnchorPane prefHeight="687.0" prefWidth="1012.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.RoomManageController">
    <children>
-      <ImageView fitHeight="445.0" fitWidth="635.0" layoutX="629.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" layoutY="10.0" pickOnBounds="true" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@../assests/20944167.jpg" />
+            <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <TableView fx:id="tblRoomView" layoutX="29.0" layoutY="27.0" prefHeight="218.0" prefWidth="856.0">
+      <TableView fx:id="tblRoomView" layoutX="41.0" layoutY="323.0" prefHeight="337.0" prefWidth="858.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="104.0">
         <columns>
-          <TableColumn fx:id="colRoom" prefWidth="100.0" text="RoomNo" />
-          <TableColumn fx:id="RoomName" prefWidth="252.0" text="Room Name" />
-            <TableColumn fx:id="colBedCount" prefWidth="252.0" text="Bed Count" />
-            <TableColumn fx:id="StudentCount" prefWidth="252.0" text="Student Count" />
+          <TableColumn fx:id="colRoom" prefWidth="134.0" text="Room No" />
+          <TableColumn fx:id="RoomName" prefWidth="251.0" text="Room Name" />
+            <TableColumn fx:id="colBedCount" prefWidth="251.0" text="Bed Count" />
+            <TableColumn fx:id="StudentCount" prefWidth="220.0" text="Student Count" />
         </columns>
       </TableView>
-      <JFXComboBox fx:id="cmbRoomNo" layoutX="36.0" layoutY="312.0" prefHeight="31.0" prefWidth="145.0" />
-      <Text layoutX="36.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room No :" wrappingWidth="71.6708984375" />
-      <JFXComboBox fx:id="cmbStudentId" layoutX="36.0" layoutY="396.0" prefHeight="31.0" prefWidth="145.0" />
-      <Text layoutX="36.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Id :" wrappingWidth="82.6708984375" />
-      <Text layoutX="350.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name :" wrappingWidth="111.6708984375" />
-      <Label fx:id="lblStudentName" layoutX="354.0" layoutY="401.0" />
-      <JFXButton layoutX="639.0" layoutY="412.0" onAction="#btnAdd" prefHeight="31.0" prefWidth="112.0" style="-fx-background-color: pink;" text="Add" />
+      <Text layoutX="28.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Id :" wrappingWidth="82.6708984375" AnchorPane.leftAnchor="28.0" />
+      <Text layoutX="328.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name :" wrappingWidth="111.6708984375" />
+      <JFXButton layoutX="287.0" layoutY="216.0" onAction="#btnAdd" prefHeight="31.0" prefWidth="112.0" style="-fx-background-color: pink;" text="Add" />
+      <JFXTextField layoutX="30.0" layoutY="216.0" AnchorPane.leftAnchor="30.0" />
+      <Label fx:id="lblStdName" layoutX="328.0" layoutY="119.0" prefHeight="21.0" prefWidth="142.0" />
+      <Text layoutX="715.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Room Manage" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="572.3291015625" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
+      <Text layoutX="28.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room No :" wrappingWidth="82.6708984375" />
+      <JFXTextField layoutX="38.0" layoutY="124.0" AnchorPane.leftAnchor="30.0" />
    </children>
 </AnchorPane>
