--- a/src/main/resources/view/managesubject_form.fxml
+++ b/src/main/resources/view/managesubject_form.fxml
@@ -3,53 +3,81 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootNode" prefHeight="506.0" prefWidth="1278.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ManageSubjectController">
+<AnchorPane fx:id="root" prefHeight="687.0" prefWidth="1012.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ManageSubjectController">
    <children>
-      <ImageView fitHeight="506.0" fitWidth="1278.0" layoutX="2.0" layoutY="3.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" pickOnBounds="true">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="410.0" fitWidth="562.0" layoutX="540.0" layoutY="35.0" opacity="0.46" pickOnBounds="true" AnchorPane.bottomAnchor="61.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="35.0">
-         <image>
-            <Image url="@../assests/Subjectwall-removebg-preview.png" />
-         </image>
-      </ImageView>
-      <Text layoutX="31.0" layoutY="196.1865234375" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Name :" AnchorPane.leftAnchor="31.0" AnchorPane.topAnchor="180.0" />
-      <JFXTextField fx:id="txtSubName" layoutX="30.0" layoutY="201.0" prefHeight="31.0" prefWidth="274.0" promptText="Enter Subject Name" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="201.0" />
-      <JFXComboBox fx:id="comboBoxBucket" layoutX="374.0" layoutY="72.0" onAction="#comboBoxBucketOnAction" prefHeight="31.0" prefWidth="205.0" promptText="Select Bucket " unFocusColor="BLACK" AnchorPane.leftAnchor="374.0" AnchorPane.topAnchor="72.0" />
-      <Text layoutX="30.0" layoutY="133.8134765625" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Code :" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="117.8134765625" />
-      <JFXButton fx:id="btnSave" layoutX="1144.0" layoutY="455.0" onAction="#btnSaveOnAction" style="-fx-background-color: white;" text="Save" AnchorPane.bottomAnchor="20.0" />
-      <JFXButton fx:id="btnNext" layoutX="766.0" layoutY="397.0" onAction="#btnNextOnAction" style="-fx-background-color: white;" text="Next" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
-      <JFXTextField fx:id="txtSubCode" layoutX="30.0" layoutY="137.0" prefHeight="31.0" prefWidth="143.0" AnchorPane.leftAnchor="30.0" />
-      <JFXComboBox fx:id="comboBoxTeacher" layoutX="30.0" layoutY="264.0" onAction="#comboBoxTeacherOnAction" prefHeight="31.0" prefWidth="274.0" promptText="Select Teacher " unFocusColor="BLACK" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="264.0" />
-      <JFXButton fx:id="btnAddTeacher" layoutX="609.0" layoutY="264.0" onAction="#btnAddTeacherOnAction" style="-fx-background-color: Red;" text="Add Teacher " />
-      <Text layoutX="374.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bucket :" AnchorPane.topAnchor="55.0" />
-      <Text layoutX="30.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Teacher : " AnchorPane.leftAnchor="30.0" />
-      <Label layoutX="168.0" layoutY="69.0" text="Manage Subject " AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <Text layoutX="375.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Manage" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font size="30.0" />
          </font>
-      </Label>
-      <Text layoutX="30.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teachers List :" AnchorPane.leftAnchor="30.0" />
-      <TableView fx:id="tblAddteachers" layoutX="31.0" layoutY="328.0" prefHeight="127.0" prefWidth="562.0">
+      </Text>
+      <Text layoutX="30.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Id :" AnchorPane.leftAnchor="30.0" />
+      <Text layoutX="32.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subject Name :" />
+      <Text layoutX="32.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bucket :" AnchorPane.leftAnchor="32.0" />
+      <Text layoutX="29.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section :" AnchorPane.leftAnchor="29.0" />
+      <JFXTextField fx:id="txtSubjectId" focusColor="BLACK" layoutX="31.0" layoutY="96.0" AnchorPane.leftAnchor="31.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <JFXTextField fx:id="txtSubjectName" focusColor="BLACK" layoutX="32.0" layoutY="177.0" prefHeight="31.0" prefWidth="190.0" AnchorPane.leftAnchor="32.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <JFXComboBox fx:id="cmbBuckets" focusColor="BLACK" layoutX="31.0" layoutY="272.0" prefHeight="31.0" prefWidth="169.0" AnchorPane.leftAnchor="31.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXComboBox>
+      <ImageView fitHeight="383.0" fitWidth="547.0" layoutX="418.0" layoutY="14.0" pickOnBounds="true">
+         <image>
+            <Image url="@../assests/Subjectwall.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="440.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teacher :" />
+      <TableView fx:id="tblSection" layoutX="32.0" layoutY="400.0" prefHeight="200.0" prefWidth="265.0">
         <columns>
-          <TableColumn fx:id="colTeacherId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="colTeacherName" prefWidth="335.0" text="Teacher Name" />
-            <TableColumn fx:id="colAction" prefWidth="151.0" text="Action" />
+          <TableColumn fx:id="colSection" prefWidth="212.0" text="Section" />
+          <TableColumn fx:id="colRadio" prefWidth="52.0" />
         </columns>
       </TableView>
-      <Text layoutX="28.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Section  :" AnchorPane.topAnchor="55.0" />
-      <JFXComboBox fx:id="comboBoxSection" layoutX="37.0" layoutY="72.0" onAction="#comboBoxSectionOnAction" prefHeight="31.0" prefWidth="143.0" AnchorPane.leftAnchor="30.0" />
-      <Label fx:id="lblTeacherName" layoutX="382.0" layoutY="269.0" />
+      <TableView fx:id="tblTeacher" layoutX="440.0" layoutY="398.0" prefHeight="200.0" prefWidth="453.0">
+        <columns>
+          <TableColumn fx:id="colTeacherId" prefWidth="96.0" text="Teacher Id" />
+            <TableColumn fx:id="colTeacherName" prefWidth="311.0" text="Name" />
+            <TableColumn fx:id="colSelect" prefWidth="45.0" />
+        </columns>
+      </TableView>
+      <JFXButton layoutX="893.0" layoutY="623.0" onAction="#btnSaveOnAction" style="-fx-background-color: white;" text="Save" />
    </children>
 </AnchorPane>
