--- a/src/main/resources/view/room_form.fxml
+++ b/src/main/resources/view/room_form.fxml
@@ -2,62 +2,84 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="root" prefHeight="586.0" prefWidth="1510.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.RoomController">
+<AnchorPane fx:id="root" minHeight="477.0" minWidth="980.0" prefHeight="687.0" prefWidth="1012.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.RoomController">
    <children>
-      <ImageView fitHeight="586.0" fitWidth="1510.0" layoutX="-2.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" layoutX="14.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <TableView fx:id="tblRoomDetails" layoutX="14.0" layoutY="90.0" opacity="0.68" prefHeight="476.0" prefWidth="990.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="490.0" AnchorPane.topAnchor="90.0">
-        <columns>
-          <TableColumn fx:id="colRoomNo" prefWidth="90.0" text="Room No" />
-            <TableColumn fx:id="colRoomName" prefWidth="196.0" text="Room Name" />
-          <TableColumn fx:id="colNoOfBed" prefWidth="184.0" text="No Of Bed" />
-            <TableColumn fx:id="colStudentCount" prefWidth="207.0" text="No Of Student" />
-            <TableColumn fx:id="colAction" prefWidth="141.0" text="Action" />
-            <TableColumn fx:id="colCompetence" prefWidth="172.0" text="Complete / Incomplete" />
-        </columns>
-      </TableView>
-      <Label layoutX="66.0" layoutY="31.0" text="View Room Details" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="183.0" fitWidth="468.0" layoutX="1023.0" layoutY="10.0" pickOnBounds="true">
+      <ImageView fitHeight="234.0" fitWidth="625.0" layoutX="371.0" layoutY="451.0" pickOnBounds="true">
          <image>
             <Image url="@../assests/room%20(2).png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="root1" layoutX="1097.0" layoutY="175.0" minHeight="390.0" prefHeight="390.0" prefWidth="394.0" style="-fx-background-color: white; -fx-background-color: 50;">
-         <children>
-            <Text layoutX="30.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room No :" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="69.0" />
-            <Text layoutX="30.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No Of Beds :" AnchorPane.leftAnchor="30.0" />
-            <Text layoutX="30.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Name :" AnchorPane.leftAnchor="30.0" />
-            <JFXTextField fx:id="txtRoomNo" layoutX="30.0" layoutY="87.0" AnchorPane.leftAnchor="30.0" />
-            <JFXTextField fx:id="txtRoomName" layoutX="30.0" layoutY="146.0" prefHeight="31.0" prefWidth="195.0" AnchorPane.leftAnchor="30.0" />
-            <JFXTextField fx:id="txtNoOfBed" layoutX="30.0" layoutY="267.0" AnchorPane.leftAnchor="30.0" />
-            <JFXButton fx:id="SaveRoom" layoutX="246.0" layoutY="345.0" onAction="#btnSaveOnAction" style="-fx-background-color: black;" text="Save" textFill="WHITE" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="97.0" />
-            <Text layoutX="30.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Count : " AnchorPane.leftAnchor="30.0" />
-            <JFXTextField fx:id="txtStudentCount" layoutX="30.0" layoutY="206.0" AnchorPane.leftAnchor="30.0" />
-            <Label layoutX="23.0" layoutY="26.0" text="Manage Room" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Label>
-            <JFXButton fx:id="UpdateRoom" layoutX="311.0" layoutY="345.0" onAction="#btnUpdateRoomOnAction" style="-fx-background-color: black;" text="Update" textFill="WHITE" AnchorPane.bottomAnchor="14.0" />
-         </children>
-      </AnchorPane>
-      <Separator layoutX="1059.0" layoutY="193.0" opacity="0.64" orientation="VERTICAL" prefHeight="356.0" prefWidth="0.0" />
+      <Text layoutX="99.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Room" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
+      <TextField layoutX="20.0" layoutY="60.0" onAction="#txtSearchRoomOnAction" prefHeight="31.0" prefWidth="783.0" promptText=" Search Room" AnchorPane.bottomAnchor="596.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="776.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="962.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
+      <JFXButton layoutX="530.0" layoutY="617.0" onAction="#btnSaveOnAction" style="-fx-background-color: white;" text="Save" />
+      <TableView fx:id="tblRoomDetails" layoutX="30.0" layoutY="113.0" prefHeight="356.0" prefWidth="952.0" AnchorPane.bottomAnchor="218.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+         <columns>
+            <TableColumn fx:id="colRoomNo" prefWidth="99.0" text="Room Id" />
+            <TableColumn fx:id="colRoomName" prefWidth="167.0" text="Name" />
+            <TableColumn fx:id="colNoOfBed" prefWidth="151.0" text="Bed Count" />
+            <TableColumn fx:id="colStudentCount" prefWidth="145.0" text="Student Count" />
+            <TableColumn fx:id="colStatus" prefWidth="268.0" text="Complete / Incomplete" />
+            <TableColumn fx:id="colAction" prefWidth="122.0" text="Delete" />
+         </columns>
+      </TableView>
+      <JFXTextField fx:id="txtRoomNo" focusColor="BLACK" layoutX="30.0" layoutY="541.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <Text layoutX="30.0" layoutY="542.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room No :" />
+      <Text layoutX="30.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Name :" />
+      <JFXTextField fx:id="txtRoomName" focusColor="BLACK" layoutX="30.0" layoutY="617.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <Text layoutX="313.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No Of Beds :" />
+      <JFXTextField fx:id="txtNoOfBed" focusColor="BLACK" layoutX="312.0" layoutY="617.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <Text layoutX="30.0" layoutY="506.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add New Room">
+         <font>
+            <Font size="25.0" />
+         </font></Text>
    </children>
 </AnchorPane>
