--- a/src/main/resources/view/studentpayments_form.fxml
+++ b/src/main/resources/view/studentpayments_form.fxml
@@ -3,49 +3,84 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootNode" prefHeight="506.0" prefWidth="1278.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.StudentPaymentController">
+<AnchorPane fx:id="root" prefHeight="687.0" prefWidth="1012.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.StudentPaymentController">
    <children>
-      <ImageView fitHeight="506.0" fitWidth="1278.0" layoutX="12.0" layoutY="77.0" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="687.0" fitWidth="1012.0" pickOnBounds="true">
          <image>
             <Image url="@../assests/gradient_4_16.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="128.0" layoutY="162.0" text="Student Payments Manage" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <Text layoutX="30.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Payment Details" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
          <font>
-            <Font size="25.0" />
+            <Font size="30.0" />
          </font>
-      </Label>
-      <JFXComboBox fx:id="cmbMonth" layoutX="26.0" layoutY="46.0" onAction="#cmbMonthOnAction" prefHeight="31.0" prefWidth="171.0" promptText="Month" />
-      <TableView fx:id="payment" layoutX="20.0" layoutY="217.0" prefHeight="233.0" prefWidth="1055.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="203.0">
-        <columns>
-            <TableColumn fx:id="colDate" prefWidth="147.0" text="Date" />
-            <TableColumn fx:id="colStudentId" prefWidth="165.0" text="Student Id" />
-            <TableColumn fx:id="colStudentName" prefWidth="458.0" text="Student Name" />
-            <TableColumn fx:id="colPayAmount" prefWidth="283.0" text="Pay Amount" />
-        </columns>
-      </TableView>
-      <AnchorPane layoutX="691.0" layoutY="46.0" prefHeight="159.0" prefWidth="565.0">
-         <children>
-            <Text layoutX="18.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Id :" />
-            <Text layoutX="263.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name:" AnchorPane.topAnchor="51.0" />
-            <JFXButton fx:id="btnPaymentMark" layoutX="312.0" layoutY="106.0" onAction="#btnPaymentMarkOnAction" style="-fx-background-color: yellow;" text="Payment Verification" />
-            <Text layoutX="18.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date :" />
-            <JFXComboBox fx:id="cmbStudentId" layoutX="103.0" layoutY="46.0" onAction="#cmbStudentIdOnAction" prefHeight="31.0" prefWidth="132.0" />
-            <Label fx:id="lblStudentName" layoutX="375.0" layoutY="51.0" />
-            <Text layoutX="20.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pay Amount :" />
-            <JFXTextField fx:id="txtAmount" layoutX="114.0" layoutY="90.0" prefHeight="31.0" prefWidth="132.0" />
-            <DatePicker fx:id="dateDate" layoutX="71.0" layoutY="9.0" />
-         </children>
-      </AnchorPane>
+      </Text>
+      <Text layoutX="30.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Id :" AnchorPane.leftAnchor="30.0" />
+      <Text layoutX="30.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Name :" />
+      <Text layoutX="30.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date :" />
+      <Text layoutX="30.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pay Amount :" />
+      <JFXButton layoutX="667.0" layoutY="355.0" onAction="#btnPaymentOnAction" style="-fx-background-color: white;" text="Payment Verification" />
+      <ListView fx:id="listPaid" layoutX="30.0" layoutY="415.0" prefHeight="200.0" prefWidth="204.0" />
+      <Text layoutX="29.0" layoutY="402.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Paid Months :" />
+      <JFXTextField fx:id="txtStudentName" focusColor="BLACK" layoutX="30.0" layoutY="163.0" prefHeight="31.0" prefWidth="192.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <JFXComboBox fx:id="cmbStudentId" focusColor="BLACK" layoutX="30.0" layoutY="92.0" onAction="#cmbStudentOnAction" prefHeight="31.0" prefWidth="140.0" AnchorPane.leftAnchor="30.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXComboBox>
+      <JFXTextField fx:id="txtDate" focusColor="BLACK" layoutX="30.0" layoutY="237.0" prefHeight="31.0" prefWidth="192.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <JFXTextField fx:id="txtPayment" focusColor="BLACK" layoutX="30.0" layoutY="308.0" prefHeight="31.0" prefWidth="192.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXTextField>
+      <Text layoutX="379.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Month :" />
+      <JFXComboBox fx:id="cmbMonth" focusColor="BLACK" layoutX="379.0" layoutY="237.0" prefHeight="31.0" prefWidth="140.0">
+         <unFocusColor>
+            <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop color="BLACK" />
+                  <Stop color="WHITE" offset="1.0" />
+               </stops>
+            </RadialGradient>
+         </unFocusColor>
+      </JFXComboBox>
    </children>
 </AnchorPane>
